Add hash location strategy and lightbox for image viewing

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,13 @@
   <title>LeafNet</title>
   <base href="/">
   <link rel="stylesheet" href="assets/bootstrap-3.3.7/dist/css/bootstrap.min.css">
+  <link href="assets/lightbox2/dist/css/lightbox.min.css" rel="stylesheet">
   <link href="assets/annotorious/css/annotorious.css" rel="stylesheet">
   <script type="text/javascript" src="assets/annotorious/annotorious.min.js"></script>
   <link rel="stylesheet" href="assets/bootstrap-3.3.7/dist/css/bootstrap-theme.min.css">
   <script src="assets/jquery-3.3.1.min.js"></script>
   <!-- Latest compiled and minified JavaScript -->
+  <script src="assets/lightbox2/dist/js/lightbox.min.js"></script>
   <script src="assets/bootstrap-3.3.7/dist/js/bootstrap.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
