Add ChartJS package

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>LeafNet</title>
-  <base href="/">
+  <base href="/~leaf-project/dist/">
   <link rel="stylesheet" href="assets/bootstrap-3.3.7/dist/css/bootstrap.min.css">
   <link href="assets/lightbox2/dist/css/lightbox.min.css" rel="stylesheet">
   <link href="assets/annotorious/css/annotorious.css" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
   <script type="text/javascript" src="assets/annotorious/annotorious.min.js"></script>
   <link rel="stylesheet" href="assets/bootstrap-3.3.7/dist/css/bootstrap-theme.min.css">
   <script src="assets/jquery-3.3.1.min.js"></script>
